--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "mc-ai-web-controller",
-  "version": "3.0.0",
+  "name": "gemini-mc-clone",
+  "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
+  "scripts": { "start": "node index.js" },
   "dependencies": {
     "mineflayer": "^4.20.0",
     "mineflayer-pathfinder": "^2.4.4",
     "mineflayer-collectblock": "^1.2.1",
-    "mineflayer-pvp": "^1.3.2",
-    "mineflayer-auto-eat": "^3.3.1",
     "@google/generative-ai": "^0.21.0",
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
