--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
-  "name": "gemini-mc-clone",
+  "name": "gemini-minecraft-bot",
   "version": "1.0.0",
+  "description": "Gemini-powered self-coding Minecraft bot",
   "main": "index.js",
-  "scripts": { "start": "node index.js" },
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
   "dependencies": {
-    "mineflayer": "^4.20.0",
-    "mineflayer-pathfinder": "^2.4.4",
-    "mineflayer-collectblock": "^1.2.1",
-    "@google/generative-ai": "^0.21.0",
     "express": "^4.18.2",
-    "socket.io": "^4.7.2"
-  }
+    "socket.io": "^4.7.2",
+    "@google/genai": "^1.0.0",
+    "mineflayer": "^4.15.0",
+    "mineflayer-pathfinder": "^2.4.5",
+    "mineflayer-collectblock": "^1.6.1",
+    "mineflayer-pvp": "^1.3.0",
+    "minecraft-data": "^3.0.0",
+    "dotenv": "^16.3.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "keywords": ["minecraft", "gemini", "ai", "bot", "mineflayer"],
+  "author": "Your Name",
+  "license": "MIT"
 }
