--- a/package.json
+++ b/package.json
@@ -13,13 +13,20 @@
     "@google/generative-ai": "^0.21.0",
     "mineflayer": "^4.15.0",
     "mineflayer-pathfinder": "^2.4.5",
-    "mineflayer-collectblock": "^1.6.1",
+    "mineflayer-collectblock": "^1.3.4",
     "mineflayer-pvp": "^1.3.0",
+    "minecraft-data": "^3.42.0",
     "dotenv": "^16.3.1"
   },
   "engines": {
     "node": ">=18.0.0"
   },
-  "keywords": ["minecraft", "gemini", "ai", "bot", "mineflayer"],
+  "keywords": [
+    "minecraft",
+    "gemini",
+    "ai",
+    "bot",
+    "mineflayer"
+  ],
   "license": "MIT"
 }
